# hdf5-graph

./: .gitignore  README.md  pyproject.toml
docs/: cli.rst  conf.py  module.rst
hdf5_graph/: handle_structure.py  hdf5-graph.py  helpers.py  main.py  single_hdf5.py
test/: conftest.py  quick_try.py  test_cli.py  test_example.py  test_main.py
