[project]
authors = [{name = "Claudius Haag", email = "claudius.haag@mib.uni-stuttgart.de"}]
dependencies = []
description = "Add a short description here"
name = "hdf5-graph"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
hdf5-graph = { path = ".", editable = true }

[tool.pixi.dependencies]
numpy = "*"
neo4j-python-driver = "*"
h5py = "*"
pytest = "*"

[tool.pixi.tasks]
test = "pytest"
